2013-06-04  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (AIRCR): New.
	(chx_init): Setting for PRIGROUP 2-bit:2-bit.
	(sched): Unlock cpu_sched_lock on return to thread.
	(preempt, chx_timer_expired, chx_handle_intr): Those can be
	considered holding cpu_sched_lock (by its equal exception
	priorities), thus no acquiring lock required.
	(CHX_PRIO_MAIN): New macro.
	(chopstx_create): Change API.
	(chopstx_attr_init, chopstx_attr_setschedparam)
	(chopstx_attr_setstack): Remove.
	(chopstx_intr_wait, chopstx_join): Call chx_cpu_sched_unlock.
	(chopstx_cleanup_push, chopstx_cleanup_pop): New.
	(chopstx_exit): Call cleanup routines.

2013-06-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_spin_lock, chx_spin_unlock): Rename.
	(chx_cpu_sched_lock, chx_cpu_sched_unlock): New.

	* chopstx.c (chx_exit): Use R8.

2013-05-29  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c (entry): Initialize data section.

	* chopstx.c (svc): Implement race avoidance between
	chx_handle_intr.
	(chx_handle_intr): Increment ->ready.  Put to ready queue
	only when it's not running.
	(chx_sched): Add an argument for race avoidance.
	(chopstx_intr_wait): Fix race condition.
	(chopstx_cond_broadcast): Fix initial value.
	(chopstx_join): Check RET.
	(chx_init): Initialize q_exit and q_join.
	(chopstx_release_irq, chopstx_release_irq_thread): Enable IRQ on
	release (as system reset default).

	* board/board-olimex-stm32-h103.h (NEUG_ADC_SETTING2_*): Add.

	* chopstx.c (chx_mutex_unlock, chopstx_exit): New.
	(chopstx_mutex_unlock): Use chx_mutex_unlock.
	(chopstx_cond_wait): Fix race condition.

2013-05-28  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_intr_wait): Rename from chopstx_wait_intr.
	(chopstx_usec_wait): Rename from chosptx_usleep.
	(chopstx_cancel, chopstx_testcancel): New.
	(idle): Moved from entry.c and use WFI if USE_WFI_FOR_IDLE.

2013-05-27  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_fatal, chopstx_exit, chopstx_join): New.