@@ -1,3 +1,11 @@
+2013-06-05  Niibe Yutaka  <gniibe@fsij.org>
+
+	* chopstx.c (sched, preempt, svc, chx_timer_expired, chx_exit)
+	(chopstx_usec_wait, chopstx_mutex_lock, chopstx_cond_wait)
+	(chopstx_intr_wait, chopstx_join): Implement SCHED_RR.
+	(chopstx_create): Change API.
+	(chopstx_wakeup_usec_wait): New.
+
 2013-06-04  Niibe Yutaka  <gniibe@fsij.org>
 
 	* chopstx.c (AIRCR): New.
